deploy/internal/label-studio/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: label-studio
  namespace: label-studio
spec:
  entryPoints:
    - int-web-secure
  tls: {}
  routes:
    - kind: Rule
      match: Host(`label-studio.internal.ticklethepanda.co.uk`)
      middlewares:
        - name: tinyauth
          namespace: tinyauth
      services:
        - name: label-studio
          namespace: label-studio
          port: 80
